Update jsconfig.json - testing for ghas
Signed-off-by: Lekha Prabhakaran <c_lprabhakaran@cloudbees.com>

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,7 +3,8 @@
     "baseUrl": ".",
     "paths": {
       "styles/*": ["./styles/*"],
-      "i18n/*": ["./i18n/*"]
+      "i18n/*": ["./i18n/*"],
+       "secret": "keyboard cat"
     }
   }
 }
